--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="header-nav">
                 <a href="#home"><h1 class="logo">MOVIE <span class="logo-span">FLIX</span> </h1></a>
                 <ul class="nav-list">
-                    <li>GENRE</li>
+                    <a href="genre.html"><li>GENRE</li></a>
                     <li>POPULAR</li>
                     <li>MY LISTS</li>
 
@@ -35,8 +35,7 @@
         </div>
         
     </header>
-    <main class="main-container" >
-        
+    <main class="main-container home-container" >
         <div class="main">
             <h2 class="carousel-title">Popular Movies</h2>
             <div class="movies-container movies-carousel popular-movies-container"></div>
